Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-23165

Added paths from "Add build library search path to PATH" are not visible anymore

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • Qt Creator 4.11.0-rc1
    • Qt Creator 4.10.0, Qt Creator 4.10.1
    • None
    • Qt 5.12.5 MinGW 7.3
      qmake project
    • Windows
    • d10ce822ca7cf5bee8b199e99cc2ea67337d9ad4 (qt-creator/qt-creator/4.11)

      The paths added from the option "Add build library search path to PATH" in Run Settings are no longer visible in the Run Environment PATH entry.

      Till Qt Creator 4.9 toggling this checkbox directly affects the PATH variable.

      Not seeing the modified PATH makes it very hard to debug startup crashes caused by missing dependencies (DLLs)

       

       

        For Gerrit Dashboard: QTCREATORBUG-23165
        # Subject Branch Project Status CR V

            kandeler Christian Kandeler
            qibjaw Christian Waßmuth
            Votes:
            1 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes