Run configurations: Let env widget reflect changes to lib search path

This broke in some refactoring.

Fixes: QTCREATORBUG-23165
Change-Id: Icb98234d83c6cb45a68562b88ee11fc9453bf6b3
Reviewed-by: hjk <hjk@qt.io>